# ocamlbyexample

./: .gitignore  CODEOWNERS  Dockerfile  Makefile  README.md  build.sh  dune  dune-project  ocamlbyexample.opam  package-lock.json  package.json  quotes.opam  quotes.opam.template  tailwind.config.js
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  new-content.md
.github/workflows/: deploy.yaml
content/: hello-world.md
css/: main.css
lib/: dune
ocamlbyexample/: dune  generate.ml  main.ml  markdown.ml
playground/: .gitignore  Makefile  dune  gen_stdlib.sh  ocamlorg-playground.opam
playground/asset/: merlin.min.js  playground.min.js  worker.min.js
templates/: template.html
test/: dune
