(subdir
 asset/
 (rule
  (targets playground.min.js)
  (mode
   (promote (until-clean)))
  (deps
   (:js %{workspace_root}/src/main.bc.js))
  (action
   (run
    esbuild
    --platform=browser
    --external:fs
    --external:tty
    --external:child_process
    --external:constants
    --minify
    --bundle
    --outfile=../dist/playground/playground.min.js
    %{js})))
 (rule
  (targets worker.min.js)
  (mode
   (promote (until-clean)))
  (deps
   (:js %{workspace_root}/src/worker.js)
   stdlib)
  (action
   (run jsoo_minify %{js} -o ../dist/playground/worker.min.js)))
 (rule
  (targets merlin.min.js)
  (mode
   (promote (until-clean)))
  (deps
   (:js %{workspace_root}/src/merlin_worker.bc.js))
  (action
   (run jsoo_minify %{js} -o ../dist/playground/merlin.min.js)))
 (rule
  (targets
   (dir stdlib))
  (mode
   (promote (until-clean)))
  (action
   (run cp -r . ../dist/playground/stdlib))))


